scss/overrides.scss
/*****************************************************************************/
/*
/* Override and extend styles from the base www.gittip.com stylesheet.
/*
/*****************************************************************************/


$brown: #614C3E;
$green: #2A8F79;
$gold: #FFC300;
$white: #FFF;

$ideal: 'Ideal Sans SSm A', 'Ideal Sans SSm B';
$surveyor: 'Surveyor SSm A', 'Surveyor SSm B';

// http://css-tricks.com/just-one-of-those-weird-things-about-css-background-on-body/
html { background: none; }

#page { padding: 0; }
h2:nth-child(1) { margin-top: 0 !important; }
ol { margin-bottom: 2em; }
.content { padding-bottom: 120px; }
strong, b { font-weight: bold; }
em, i { font-style: italic; }
ul li { list-style: circle; margin: 0 0 0 1.5em; }
li:nth-child(-1) { margin-bottom: 1em; }
ul ul { margin-top: 1em; }
ol ol { margin-top: 1em; }
blockquote {
    border-left: 2px solid $light-gray;
    padding-left: 1em;
    margin-bottom: 1em;

    p:last-child {
        padding-bottom: 0;
    }
}


// for iframed pages
html { height: 100%; }
body { height: 100%; }
iframe {
    width: 100%;

    // calc + libsass: https://github.com/hcatlin/libsass/issues/104
    height: calc(unquote("100% - 81px"));

    border: 0;
}


// for brand page
.chip {
    width: 128px;
    height: 128px;
    display: inline-block;
    margin-right: 16px;
    color: white;
    text-align: center;
    line-height: 128px;
    font-family: monospace;

    &.green { background: $green; }
    &.brown { background: $brown; }
}

h1 {
    font: normal 32px/40px $ideal ! important;
    font-weight: 700 ! important;
    text-transform: none ! important;
    color: $brown ! important;
    letter-spacing: 0 ! important;
}

h2 {
    font: normal 16px/24px $ideal ! important;
    font-weight: 700 ! important;
    margin-bottom: 96px 0 32px ! important;
    color: $brown ! important;
    text-transform: uppercase ! important;
    letter-spacing: 0 ! important;
}

h3 {
    font: normal 16px/24px $ideal ! important;
    font-weight: 700 ! important;
    margin-bottom: 96px 0 32px ! important;
    color: $brown ! important;
    text-transform: uppercase ! important;
    letter-spacing: 0 ! important;
}

body {
    font: normal 16px/24px $surveyor;
    font-weight: 300;
    color: $black;
}

